[project]
name = "dnot"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "zephyrzhang3", email = "zephyrzhang3@qq.com" }]
dependencies = [
    "torch==1.9.0+cu111",
    "numpy>=1.24.1",
    "scipy>=1.10.1",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.7.5",
    "tqdm>=4.64.1",
    "seaborn>=0.13.2",
    "pandas>=2.0.3",
    "h5py>=3.11.0",
    "six>=1.16.0",
    "torchvision==0.10.0+cu111",
    "pot>=0.9.4",
    "lpips>=0.1.4",
    "opencv-python>=4.10.0.84",
    "diffusers>=0.29.2",
    "setuptools>=59.5.0",
    "pillow>=10.2.0",
    "tensorboardx>=2.6.2.2",
    "torchmetrics>=1.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pip>=24.1.2",
    "requests>=2.28.1",
    "jupyterlab<=4.3.0",
    "ipywidgets>=8.1.3",
    "jupyterlab-execute-time>=3.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dnot"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu111"
